--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -1,6 +1,41 @@
-Ritisha Bajaj
-Dev-A-Web
-Day 1
-fufnnj
-Gitisnvd 
-vnjdn
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name ="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Connect Four</title>
+</head>
+<body>
+    
+    <div class="navbar">
+        <div class="nav-left">
+            <h2>Connect Four Game</h2>
+        </div>
+        <div class="nav-right">
+            <a href="#" class = "nav-link">Home</a>
+            <a href="#" class = "nav-link">Rules</a>
+            <a href="#" class = "nav-link">About</a>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class = "player-panel">
+            <div class = "player-red player">
+                <div class="player-color red"></div>
+                <div>
+                    <h3>Player 1</h3>
+                    <p class = "p-label">(Red)</p>
+                </div>
+            </div>
+            <div class = "player-yellow player">
+                <div class="player-color yellow"></div>
+                <div>
+                    <h3>Player 2</h3>
+                    <p class = "p-label">(Yellow)</p>
+                </div>
+        </div>
+    </div>
+
+</body>
+</html>
