--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -21,42 +21,44 @@
 
     <div class="container">
         <div class = "player-panel">
-            <div class = "player-red player">
+            <div class = "player red-player">
                 <div class="player-color red"></div>
                 <div>
                     <h3>Player 1</h3>
                     <p class = "p-label">(Red)</p>
                 </div>
             </div>
-            <div class = "player-yellow player">
+            <div class = "player yellow-player">
                 <div class="player-color yellow"></div>
                 <div>
                     <h3>Player 2</h3>
                     <p class = "p-label">(Yellow)</p>
                 </div>
         </div>
-    </div>
 
-    <div class="board-section">
-        <div id="status">Player 1 (Red) - Your turn</div>
-        <div id ="board"></div>
-        <div class="buttons">
-            <button id ="reset">Reset Game</button>
-            <button id ="new-game">New Game</button>
+        <div class="board-section">
+            <div id="status">Player 1 (Red) - Your turn</div>
+            <div id ="board"></div>
+            <div class="buttons">
+                <button id ="reset">Reset Game</button>
+                <button id ="new-game">New Game</button>
+            </div>
+        </div>
+
+        <div class = "instructions">
+            <h3>How to Play Connect Four</h3>
+            <ul>
+                <li>Players take turns dropping their colored discs into columns.</li>
+                <li>The disc will fall into the lowest empty slot.</li>
+                <li>First player uses <strong>Red</strong>.</li>
+                <li>Second player uses <strong>Yellow</strong>.</li>
+                <li>Click a column to place your disc.</li>
+                <li>Get 4 in a row to win!</li>
+            </ul>
         </div>
     </div>
 
-    <div class = "instructions">
-        <h3>How to Play Connect Four</h3>
-        <ul>
-            <li>Players take turns dropping their colored discs into columns.</li>
-            <li>The disc will fall into the lowest empty slot.</li>
-            <li>First player uses <strong>Red</strong>.</li>
-            <li>Second player uses <strong>Yellow</strong>.</li>
-            <li>Click a column to place your disc.</li>
-            <li>Get 4 in a row to win!</li>
-        </ul>
-    </div>
+
 
 </body>
 </html>
