--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -34,10 +34,11 @@
                     <h3>Player 2</h3>
                     <p class = "p-label">(Yellow)</p>
                 </div>
+            </div>
         </div>
 
         <div class="board-section">
-            <div id="status">Player 1 (Red) - Your turn</div>
+            <div class="status-box">Player 1 (Red) - Your turn</div>
             <div id ="board"></div>
             <div class="buttons">
                 <button id ="reset">Reset Game</button>
@@ -46,7 +47,7 @@
         </div>
 
         <div class = "instructions">
-            <h3>How to Play Connect Four</h3>
+            <h3>How to Play</h3>
             <ul>
                 <li>Players take turns dropping their colored discs into columns.</li>
                 <li>The disc will fall into the lowest empty slot.</li>
@@ -57,6 +58,9 @@
             </ul>
         </div>
     </div>
+
+
+
 
 
 
