--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -20,6 +20,7 @@
     </div>
 
     <div class="container">
+        
         <div class = "player-panel">
             <div class = "player red-player">
                 <div class="player-color red"></div>
@@ -57,12 +58,10 @@
                 <li>Get 4 in a row to win!</li>
             </ul>
         </div>
+
     </div>
 
-
-
-
-
+    <script src="script.js"></script>
 
 </body>
 </html>
