--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="container">
-        
+
         <div class = "player-panel">
             <div class = "player red-player">
                 <div class="player-color red"></div>
@@ -40,7 +40,7 @@
 
         <div class="board-section">
             <div class="status-box">Player 1 (Red) - Your turn</div>
-            <div id ="board"></div>
+            <div class="board"></div>
             <div class="buttons">
                 <button id ="reset">Reset Game</button>
                 <button id ="new-game">New Game</button>
@@ -61,7 +61,7 @@
 
     </div>
 
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 
 </body>
 </html>
