--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div class="navbar">
+    <div class="nav-bar">
         <div class="nav-left">
             <h2>Connect Four Game</h2>
         </div>
